--- a/app/assets/stylesheets/leagues.css.scss
+++ b/app/assets/stylesheets/leagues.css.scss
@@ -1,3 +1,7 @@
-// Place all the styles related to the leagues controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.box {
+  border: 1px solid black;
+  float: left;
+  padding: 10px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
