--- a/app/views/leagues/draft.html.erb
+++ b/app/views/leagues/draft.html.erb
@@ -1,20 +1,41 @@
 <h2>Draft Page</h2>
+<p>Choose one player:</p>
 
-<h4>Platinum Players:</h4>
-<% @platinum_players.each do |player| %>
-  <%= "#{player.first_name} #{player.last_name}" %>
-  <br>
-<% end %>
+<div class="box" id="platinum">
+  <%= form_tag select_player_path, :method => :put do %>
+    <h4>Platinum Players:</h4>
+      <select>
+        <% @platinum_players.each do |player| %>
+          <option>
+            <%= "#{player.first_name} #{player.last_name}" %>
+          </option>
+        <% end %>
+      </select>
+    <%= submit_tag "Select Player" %>
+  <% end %>
+</div>
 
-<h4>Gold Players:</h4>
-<% @gold_players.each do |player| %>
-  <%= "#{player.first_name} #{player.last_name}" %>
-  <br>
-<% end %>
+<div class="box" id="gold">
+  <h4>Gold Players:</h4>
+    <select>
+      <% @gold_players.each do |player| %>
+        <option>
+          <%= "#{player.first_name} #{player.last_name}" %>
+        </option>
+      <% end %>
+    </select>
+    <%= submit_tag "Select Player" %>
+</div>
 
-<h4>Silver Players:</h4>
-<% @silver_players.each do |player| %>
-  <%= "#{player.first_name} #{player.last_name}" %>
-  <br>
-<% end %>
+<div class="box" id="silver">
+  <h4>Silver Players:</h4>
+    <select>
+      <% @silver_players.each do |player| %>
+        <option>
+          <%= "#{player.first_name} #{player.last_name}" %>
+        </option>
+      <% end %>
+    </select>
+    <%= submit_tag "Select Player" %>
+</div>
 
