working on draft css

--- a/app/assets/stylesheets/leagues.css.scss
+++ b/app/assets/stylesheets/leagues.css.scss
@@ -1,7 +1,15 @@
-.box {
+#invite {
+  border: 1px solid black;
+}
+
+.draft_pick {
   border: 1px solid black;
   float: left;
   padding: 10px;
-  margin-left: 20px;
-  margin-right: 20px;
+  margin-left: 40px;
+  margin-right: 40px;
+}
+
+#draft_info {
+
 }
