--- a/app/views/leagues/_draft_form.erb
+++ b/app/views/leagues/_draft_form.erb
@@ -1,4 +1,4 @@
-<div class="box" id="platinum">
+<div class="draft_pick" id="platinum">
   <%= form_tag select_player_path, :method => :put do %>
     <h4>Platinum Players:</h4>
       <select name="selected_player">
@@ -12,7 +12,7 @@
   <% end %>
 </div>
 
-<div class="box" id="gold">
+<div class="draft_pick" id="gold">
   <%= form_tag select_player_path, :method => :put do %>
     <h4>Gold Players:</h4>
       <select name="selected_player">
@@ -26,7 +26,7 @@
   <% end %>
 </div>
 
-<div class="box" id="silver">
+<div class="draft_pick" id="silver">
   <%= form_tag select_player_path, :method => :put do %>
     <h4>Silver Players:</h4>
       <select name="selected_player">
