edited more draft css

--- a/app/assets/stylesheets/leagues.css.scss
+++ b/app/assets/stylesheets/leagues.css.scss
@@ -1,3 +1,18 @@
+#view_draft {
+  border: 1px solid black;
+  font-size: 16px;
+  #start_draft{
+
+  }
+  #draft_info{
+
+  }
+}
+
+#league_info {
+  border: 1px solid black;
+}
+
 #invite {
   border: 1px solid black;
 }
