--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,16 +8,22 @@
   </head>
   <body>
 
-  <div id="nav">
-    <%= link_to "Home", root_path %>
-    <% if current_user %>
-      <%= link_to "Edit Profile", edit_user_path(current_user.id) %>
-      <%= link_to "Logout", :logout %>
-    <% else %>
-      <%= link_to "Register", new_user_path %> |
-      <%= link_to "Login", :login %>
-    <% end %>
-  </div>
+  <nav id="nav">
+    <div id="site_name">
+      <%= link_to "Fantasy Magic League", root_path %>
+    </div>
+
+    <div id="user_controls">
+      <% if current_user %>
+        <%= link_to "Edit Profile", edit_user_path(current_user.id) %>
+        <%= link_to "Add Tournament", new_tournament_path %>
+        <%= link_to "Logout", :logout %>
+      <% else %>
+        <%= link_to "Register", new_user_path %> |
+        <%= link_to "Login", :login %>
+      <% end %>
+    </div>
+  </nav>
   <div>
     <p id="notice"><%= notice %></p>
     <p id="alert"><%= alert %></p>
