--- a/app/views/leagues/_add_user_form.html.erb
+++ b/app/views/leagues/_add_user_form.html.erb
@@ -1,9 +1,9 @@
-<%= form_tag add_user_path, :method => :put do %>
+<%= form_tag add_user_path, :method => :put, :remote => true do %>
   <div class="field">
     <%= label_tag "Add a user (email) to your league:" %>
     <%= text_field_tag :email %>
   </div>
   <div class="actions">
-    <%= submit_tag %>
+    <%= submit_tag "Add player" %>
   </div>
 <% end %>
