--- a/app/assets/stylesheets/draft.css.scss
+++ b/app/assets/stylesheets/draft.css.scss
@@ -1,23 +1,3 @@
-.draft_box {
-  height: 300px;
-  width: 700px;
-  border: 1px solid black;
-  border-radius: 5px;
-  background: black;
-  background: rgba(0,0,0,0.8);
-  left: 15%;
-  display: none;
-  // margin: 0 auto;
-  position: absolute;
-  z-index: 20;
-  color: white;
-  .box_close {
-    color: white;
-    font-size: 25px;
-    float: right;
-  }
-}
-
 .draft_pick {
   border: 1px solid black;
   float: left;
@@ -29,3 +9,68 @@
 #draft_info {
 
 }
+
+.draft_box {
+  height: 300px;
+  width: 700px;
+  border: 1px solid black;
+  border-radius: 5px;
+  background: black;
+  background: rgba(0,0,0,0.8);
+  display: none;
+  position: absolute;
+  z-index: 20;
+  color: white;
+  overflow: auto;
+
+  // margin: 0 auto;
+  left: 15%;
+  .box_close {
+    color: white;
+    font-size: 25px;
+    float: right;
+  }
+}
+
+.player_box {
+  color: white;
+  height: 120px;
+  width: 80px;
+  border: 1px solid white;
+  border-radius: 5px;
+  float: left;
+  margin: 10px;
+  padding: 5px;
+  background: black;
+}
+
+.picture_box {
+  height: 50px;
+  width: 78px;
+  border: 1px solid white;
+  border-radius: 5px;
+}
+
+.text_box {
+  height: 50px;
+  width: 70px;
+  border: 1px solid white;
+  border-radius: 5px;
+  margin-top: 5px;
+  padding: 4px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
