--- a/app/views/leagues/_draft_box.html.erb
+++ b/app/views/leagues/_draft_box.html.erb
@@ -2,15 +2,16 @@
   <div class="box_close">&times;</div>
   <div class="draft_pick">
     <%= form_tag select_player_path, :method => :put do %>
-      <h4><%= idstring.upcase %> Players</h4>
-        <select name="selected_player">
-          <% players.each do |player| %>
-            <option value="<%= player.id %>">
-              <%= "#{player.first_name} #{player.last_name}" %>
-            </option>
-          <% end %>
-        </select>
-      <%= submit_tag "Select Player" %>
+      <h4><%= typestring %> Players</h4>
+        <% players.each do |player| %>
+          <div class="player_box" id="<%"player_#{player.id}"%>">
+            <div class="picture_box">
+            </div>
+            <div class="text_box">
+              <%= "#{player.full_name}" %>
+            </div>
+          </div>
+        <% end %>
     <% end %>
   </div>
 </div>
