--- a/app/views/leagues/_draft_form.html.erb
+++ b/app/views/leagues/_draft_form.html.erb
@@ -1,6 +1,6 @@
-<%= render "draft_box", :players => @remaining_platinum_players, :idstring => "platinum_box" %>
-<%= render "draft_box", :players => @remaining_gold_players, :idstring => "gold_box" %>
-<%= render "draft_box", :players => @remaining_silver_players, :idstring => "silver_box" %>
+<%= render "draft_box", :players => @remaining_platinum_players, :idstring => "platinum_box", :typestring => "Platinum" %>
+<%= render "draft_box", :players => @remaining_gold_players, :idstring => "gold_box", :typestring => "Gold" %>
+<%= render "draft_box", :players => @remaining_silver_players, :idstring => "silver_box", :typestring => "Silver" %>
 
 
 <div class="draft_pick" id="platinum">
