About to change draft form to JS

--- a/app/views/leagues/draft.html.erb
+++ b/app/views/leagues/draft.html.erb
@@ -2,7 +2,7 @@
 
 <% if current_user.id == @league.active_user_id %>
   <div id="player_select">
-    <p>Choose one player:</p>
+    <p>Select One:</p>
     <%= render "draft_form" %>
 
   </div>
