--- a/app/assets/stylesheets/draft.css.scss
+++ b/app/assets/stylesheets/draft.css.scss
@@ -1,22 +1,9 @@
-.draft_pick {
-  border: 1px solid black;
-  float: left;
-  padding: 10px;
-  margin-left: 40px;
-  margin-right: 40px;
-}
-
-#draft_info {
-
-}
-
 .draft_box {
-  height: 300px;
+  height: 400px;
   width: 700px;
-  border: 1px solid black;
   border-radius: 5px;
   background: black;
-  background: rgba(0,0,0,0.8);
+  background: rgba(0,0,0,0.6);
   display: none;
   position: absolute;
   z-index: 20;
@@ -25,11 +12,29 @@
 
   // margin: 0 auto;
   left: 15%;
-  .box_close {
-    color: white;
-    font-size: 25px;
-    float: right;
-  }
+}
+
+.box_title {
+  width: 200px;
+  margin: 10px auto;
+  text-align: center;
+  font-size: 20px;
+}
+
+.box_close {
+  color: white;
+  font-size: 30px;
+  float: right;
+  width: 20px;
+  padding: 5px;
+}
+
+.draft_pick {
+  border: 1px solid black;
+  float: left;
+  padding: 10px;
+  margin-left: 40px;
+  margin-right: 40px;
 }
 
 .player_box {
