--- a/app/views/leagues/_draft_box.html.erb
+++ b/app/views/leagues/_draft_box.html.erb
@@ -1,17 +1,19 @@
 <div class="draft_box" id="<%="#{idstring}"%>">
+  <div class="box_title">
+    <%= typestring %> Players
+  </div>
   <div class="box_close">&times;</div>
   <div class="draft_pick">
     <%= form_tag select_player_path, :method => :put do %>
-      <h4><%= typestring %> Players</h4>
-        <% players.each do |player| %>
-          <div class="player_box" id="<%"player_#{player.id}"%>">
-            <div class="picture_box">
-            </div>
-            <div class="text_box">
-              <%= "#{player.full_name}" %>
-            </div>
+      <% players.each do |player| %>
+        <div class="player_box" id="<%"player_#{player.id}"%>">
+          <div class="picture_box">
           </div>
-        <% end %>
+          <div class="text_box">
+            <%= "#{player.full_name}" %>
+          </div>
+        </div>
+      <% end %>
     <% end %>
   </div>
 </div>
