--- a/app/views/leagues/show.html.erb
+++ b/app/views/leagues/show.html.erb
@@ -1,5 +1,5 @@
 <div id="js_notice"></div>
-
+<div id="greeting"><%= current_user.username %></div>
 <div id="view_draft">
   <% if @league.in_process == false && @league.admin_id == current_user.id %>
     <div id="start_draft">
@@ -22,7 +22,7 @@
     <% @league.users.each do |user| %>
       <%= user.username %>
       <ul>
-        <% user.players.each do |player| %>
+        <% user.players.reverse.each do |player| %>
           <li><%= player.full_name %></li>
         <% end %>
       </ul>
