changed player profile image

--- a/app/assets/stylesheets/draft.css.scss
+++ b/app/assets/stylesheets/draft.css.scss
@@ -60,7 +60,7 @@
   border: 1px solid black;
   border-radius: 5px;
   // background: white;
-  background-image: url("http://www.wizards.com/mtg/images/daily/wallpapers/WP_JacetheMindSculptor_1024x768.jpg");
+  background-image: url("jace.jpg");
   background-size: cover;
   background-repeat:no-repeat;
   background-position: center;
