--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,8 @@
         <%= link_to "Edit Profile", edit_user_path(current_user.id) %>
         <%= link_to "Add Tournament", new_tournament_path %>
         <%= link_to "Logout", :logout %>
+        <br>
+        Logged in as <%= current_user.username %>
       <% else %>
         <%= link_to "Register", new_user_path %> |
         <%= link_to "Login", :login %>
