--- a/app/views/leagues/draft.html.erb
+++ b/app/views/leagues/draft.html.erb
@@ -1,4 +1,4 @@
-<h2>Select One</h2>
+<h2 id="select">Select One</h2>
 
 <% if current_user.id == @league.active_user_id %>
   <div id="player_select">
