--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing players</h1>
+<h1>Pro Player List</h1>
 
 <table>
   <tr>
@@ -17,9 +17,9 @@
     <td><%= player.last_name %></td>
     <td><%= player.nationality %></td>
     <td><%= player.pro_club_level %></td>
-    <td><%= link_to 'Show', player %></td>
-    <td><%= link_to 'Edit', edit_player_path(player) %></td>
-    <td><%= link_to 'Destroy', player, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%#= link_to 'Show', player %></td>
+    <td><%#= link_to 'Edit', edit_player_path(player) %></td>
+    <td><%#= link_to 'Destroy', player, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
