minor style changes

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -95,3 +95,15 @@
   margin-top: 50px;
   text-align: center;
 }
+
+#new_league {
+  margin-left: 15px;
+}
+
+#league_listing {
+  margin-left: 15px;
+}
+
+#pro_listing {
+  margin-left: 15px;
+}
