--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,7 @@
 </div>
 
 <div id="league_unit">
-  <h2>Your leagues</h2>
+  <h2>Your Leagues</h2>
   <% if current_user.present? %>
     <% current_user.leagues.each do |league| %>
       <%= link_to league.name, league %>
@@ -15,7 +15,9 @@
 </div>
 
 <div class="links">
+  <h2>Find a League</h2>
+  <%= link_to 'New League', new_league_path %> |
   <%= link_to "All Leagues", leagues_path %>
-  <%= link_to "All Pro Players", players_path %>
+  <%#= link_to "All Pro Players", players_path %>
 </div>
 
