--- a/app/views/leagues/index.html.erb
+++ b/app/views/leagues/index.html.erb
@@ -1,23 +1,22 @@
-<h1>League Listing</h1>
+<div id="league_listing">
+  <h1>League Listing</h1>
 
-<table>
-  <tr>
-    <th>Name</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+  <table>
+    <tr>
+      <th>Name</th>
+      <th></th>
+      <th></th>
+      <th></th>
+    </tr>
 
-<% @leagues.each do |league| %>
-  <tr>
-    <td><%= league.name %></td>
-    <td><%= link_to 'View', league %></td>
-    <td><%#= link_to 'Edit', edit_league_path(league) %></td>
-    <td><%#= link_to 'Destroy', league, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
+  <% @leagues.each do |league| %>
+    <tr>
+      <td><%= link_to league.name, league %></td>
+      <td><%#= link_to 'Edit', edit_league_path(league) %></td>
+      <td><%#= link_to 'Destroy', league, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    </tr>
+  <% end %>
+  </table>
 
-<br />
-
-<%= link_to 'New League', new_league_path %>
+  <br />
+</div>
