--- a/app/views/leagues/new.html.erb
+++ b/app/views/leagues/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New league</h1>
+<div id="new_league">
+  <h1>New league</h1>
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Back', leagues_path %>
+  <%= link_to 'Back', leagues_path %>
+</div>
