--- a/app/views/leagues/_add_user_form.html.erb
+++ b/app/views/leagues/_add_user_form.html.erb
@@ -4,6 +4,6 @@
     <%= text_field_tag :email %>
   </div>
   <div class="actions">
-    <%= submit_tag "Add player" %>
+    <%= submit_tag "Add User" %>
   </div>
 <% end %>
