changed site name

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Fantasy Magic League</title>
+    <title>FantasyMTG</title>
       <%= stylesheet_link_tag    "application" %>
       <%= javascript_include_tag "application" %>
       <%= csrf_meta_tags %>
@@ -10,7 +10,7 @@
 
   <nav id="nav">
     <div id="site_name">
-      <%= link_to "Fantasy Magic League", root_path %>
+      <%= link_to "FantasyMTG", root_path %>
     </div>
 
     <div id="color_pie">
